--- a/index.css
+++ b/index.css
@@ -12,64 +12,141 @@
 .N-I-S-H-I-K-I-G-O---Furniture-Design-Award-2014-4-hsla { color: hsla(174, 8, 32, 1); }
 .N-I-S-H-I-K-I-G-O---Furniture-Design-Award-2014-5-hsla { color: hsla(0, 0, 75, 1); }
 
-html{
-    
-        margin: 0 auto;
-        height: 100%;
-        width: 100%;
-        
-    scroll-behavior: smooth;
-}
 * {
     margin: 0;
     padding: 0;
-}
-body {
-    font-family: "Roboto", sans-serif;
-    
-        width: 100%;
-        overflow-x: hidden;
-        font-family: "Roboto", sans-serif;
-
-}
-.logo {
-    height: 520px;
-    width: 430px;
-}
-.container3-wrapper{
-    display: flex;
-}
-
-a {
+  }
+  
+  a {
     font-family: sans-serif;
     text-decoration: none;
-}
-.header {
-    background-color: #127369; ;
-    position: fixed;
-    width: 100%;
-}
-.nav {
-    max-width: 90%;
+  }
+  
+  .header {
+    background: rgba(18, 114, 105, 1);
+    padding-inline: 16px;
+  }
+  
+  .nav {
+    max-width: 1280px;
     height: 70px;
     margin-inline: auto;
+  
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
-    
-}
-.nav-list {
-    display: flex;
-    gap: 50px;
-    list-style: none;
-    
-}
-.nav-list a{
-    font-size: 20px;
+  }
+  
+  .logo {
+    font-size: 48px;
     color: white;
+  }
+  
+  .nav-list {
+    display: flex;
+    gap: 32px;
+    list-style: none;
+  }
+  
+  .nav-list a {
+    font-size: 18px;
+    color: #fff;
+    padding-block: 16px;
+  }
+  
+  .hero {
+    height: calc(100vh - 70px);
     
-}
+  }
+  
+  .hamburger {
+    display: none;
+    border: none;
+    background: none;
+    border-top: 3px solid #fff;
+    cursor: pointer;
+  }
+  
+  .hamburger::after,
+  .hamburger::before {
+    content: " ";
+    display: block;
+    width: 30px;
+    height: 3px;
+    background: #fff;
+    margin-top: 5px;
+    position: relative;
+    transition: 0.3s;
+  }
+  
+  @media (max-width: 750px) {
+    .hamburger {
+      display: block;
+      z-index: 1;
+    }
+  
+    .nav-list {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: rgba(18, 114, 105, 1);
+      clip-path: circle(100px at 90% -15%);
+      transition: 1s ease-out;
+  
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: center;
+      gap: 0;
+  
+      pointer-events: none;
+    }
+  
+    .nav-list a {
+      font-size: 24px;
+      opacity: 0;
+    }
+  
+    .nav-list li:nth-child(1) a {
+      transition: 0.5s 0.2s;
+    }
+  
+    .nav-list li:nth-child(2) a {
+      transition: 0.5s 0.4s;
+    }
+  
+    .nav-list li:nth-child(3) a {
+      transition: 0.5s 0.6s;
+    }
+  
+    /* Estilos ativos */
+  
+    .nav.active .nav-list {
+      clip-path: circle(1500px at 90% -15%);
+      pointer-events: all;
+    }
+  
+    .nav.active .nav-list a {
+      opacity: 1;
+    }
+  
+    .nav.active .hamburger {
+      position: fixed;
+      top: 26px;
+      right: 16px;
+      border-top-color: transparent;
+    }
+  
+    .nav.active .hamburger::before {
+      transform: rotate(135deg);
+    }
+  
+    .nav.active .hamburger::after {
+      transform: rotate(-135deg);
+      top: -7px;
+    }
+  }
 
 body{
     margin: auto;
