--- a/index.css
+++ b/index.css
@@ -12,52 +12,56 @@
 .N-I-S-H-I-K-I-G-O---Furniture-Design-Award-2014-4-hsla { color: hsla(174, 8, 32, 1); }
 .N-I-S-H-I-K-I-G-O---Furniture-Design-Award-2014-5-hsla { color: hsla(0, 0, 75, 1); }
 
+html{
+    width: auto;
+    margin: auto;
+    scroll-behavior: smooth;
+}
 * {
     margin: 0;
     padding: 0;
-  }
-  
-  a {
+}
+body {
+    font-family: "Roboto", sans-serif;
+}
+.logo {
+    height: 520px;
+    width: 430px;
+}
+.container3-wrapper{
+    display: flex;
+}
+
+a {
     font-family: sans-serif;
     text-decoration: none;
-  }
-  
-  .header {
-    background: rgba(18, 114, 105, 1);
-    padding-inline: 16px;
-  }
-  
-  .nav {
-    max-width: 1280px;
+}
+.header {
+    background-color: #127369; ;
+    position: fixed;
+    width: 100%;
+}
+.nav {
+    max-width: 90%;
     height: 70px;
     margin-inline: auto;
-  
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
-  
-  .logo {
-    font-size: 48px;
-    color: white;
-  }
-  
-  .nav-list {
-    display: flex;
-    gap: 32px;
-    list-style: none;
-  }
-  
-  .nav-list a {
-    font-size: 18px;
-    color: #fff;
-    padding-block: 16px;
-  }
-  
-  .hero {
-    height: calc(100vh - 70px);
     
-  }
+    
+}
+.nav-list {
+    display: flex;
+    gap: 50px;
+    list-style: none;
+    
+}
+.nav-list a{
+    font-size: 20px;
+    color: white;
+    
+}
   
   .hamburger {
     display: none;
@@ -79,19 +83,47 @@
     transition: 0.3s;
   }
   
-.titulo{
- display: flex;
- align-items: center;
- justify-content: space-between;
- font-size: 26px;
- margin-left: 2px;
- color: #127369;
- margin-top: 20px;
-}
-.titulo{
-    width: 50%;
-}
 
+body{
+    margin: auto;
+    width: auto;
+}
+    
+    
+.container1{
+    padding: 10%;
+    margin: auto;
+    background-color:rgba(15, 63, 58, 1);
+    
+}
+.container2{
+    padding: 20px;
+    margin: auto;
+    background-color:#127369;;
+}
+.container3{
+    padding: 8%;
+    margin: auto;
+    background-color: #ece5d7;
+}
+.container4{
+    padding: 10%;
+    margin: auto;
+    background-color:#ece5d7;
+    }
+
+main .princ{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 26px;
+    margin-left: 2px;
+    color: #127369;
+}
+.titulo{
+    width: 80%;
+
+}
 .solucoes{
     width: 250px;
     font-size: 30px;
@@ -108,7 +140,9 @@
     text-align: center;
     color: white;
     font-weight: 600;
-}
+    
+ }
+
 
 .ebook-link{
     width: 250px;
@@ -137,15 +171,7 @@
 }
 
 .ebook {
-    
-    align-items: center;
-    justify-content: space-between;
-    font-size: 30px;
-    margin-left: 2px;
-    color: white;
-}
-.subtit{
-    
+    display: flex;
     align-items: center;
     justify-content: space-between;
     font-size: 30px;
@@ -272,8 +298,8 @@ footer p{
 }
 .empresasflex{display: flex;
     justify-content: space-evenly;
-    padding: 2%;
-    background-color: white;
+    background-color: #127369;
+    padding: 50px;
     
 }
 .empresasflex2{
@@ -300,13 +326,14 @@ footer p{
     color: white;
 }
 
-
-  @media (max-width: 750px) {
+@media (max-width: 750px) {
     .hamburger {
       display: block;
       z-index: 1;
     }
-  
+   .logo{
+    display: none;
+   }
     .nav-list {
       position: fixed;
       top: 0;
@@ -377,7 +404,9 @@ footer p{
     .capa {
         display: none;
     }
-   
+   .empresasflex{
+    background-color:#127369;;
+   }
     .solucoes{
         width: 180px;
         font-size: 30px;
@@ -436,4 +465,8 @@ footer p{
     .residuos-img{
         display: none;
     }
+    .empresasflex{
+        align-items: center;
+    }
 }
+
